--- a/assets/css/comm.css
+++ b/assets/css/comm.css
@@ -255,10 +255,15 @@ legend {
   content: "";
 }
 
+body {
+  background-image: url(../../images/mainbg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 800px;
+}
+
 #header {
   width: 100%;
   height: 120px;
-  background: #e0e0e0;
   display: flex;
   justify-content: space-between;
   position: absolute;
@@ -269,10 +274,10 @@ legend {
 }
 #header h1 a {
   display: block;
-  height: 68px;
+  height: 48px;
 }
 #header h1 a img {
-  width: 350px;
+  width: 250px;
 }
 #header .nav ul {
   display: flex;
@@ -286,13 +291,19 @@ legend {
 #header .nav .top_nav ul {
   gap: 30px;
 }
+#header .nav .top_nav ul a {
+  color: white;
+}
 #header .nav .main_nav {
-  font-size: 24px;
+  font-size: 23px;
   font-weight: bold;
   margin-top: 25px;
 }
-#header .nav .main_nav ul {
+#header .nav .main_nav .nav_1depth {
   gap: 50px;
+}
+#header .nav .main_nav .nav_1depth a {
+  color: white;
 }
 
 #main {
@@ -301,7 +312,87 @@ legend {
 #main .menu {
   width: 100%;
   height: 800px;
-  background-color: #c2c2c2;
+  text-align: center;
+  padding-top: 170px;
+}
+#main .menu h2 {
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
+  padding-bottom: 10px;
+}
+#main .menu img {
+  width: 300px;
+}
+#main .menu .search {
+  padding: 50px 0;
+}
+#main .menu .search input {
+  border: 2px solid #97ca66;
+  border-radius: 10px 0 0 10px;
+  width: 700px;
+  height: 60px;
+  font-family: "Pretendard";
+  padding: 15px;
+}
+#main .menu .search button {
+  background: #97ca66;
+  width: 60px;
+  height: 60px;
+  border-radius: 0 10px 10px 0;
+  margin-left: -7px;
+}
+#main .menu .search button img {
+  width: 25px;
+}
+#main .menu .big_menu {
+  padding-top: 50px;
+}
+#main .menu .big_menu .big_menu_list {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+#main .menu .big_menu .big_menu_list li {
+  background: white;
+  box-shadow: rgb(104, 104, 104) 0px 0px 10px;
+  border-radius: 10px;
+  width: 170px;
+  height: 230px;
+}
+#main .menu .big_menu .big_menu_list li a {
+  display: block;
+  width: 170px;
+  height: 230px;
+}
+#main .menu .big_menu .big_menu_list li a img {
+  width: 120px;
+  margin: 20px 0 10px 0;
+}
+#main .menu .big_menu .big_menu_list li a h3 {
+  font-weight: bold;
+  line-height: 1.2;
+}
+#main .menu .big_menu .big_menu_list li a .fa-arrow-right {
+  display: none;
+}
+#main .menu .big_menu .big_menu_list li:hover {
+  background: #97ca66;
+  transition: background 0.3s ease;
+}
+#main .menu .big_menu .big_menu_list li:hover a img {
+  display: none;
+}
+#main .menu .big_menu .big_menu_list li:hover a h3 {
+  color: white;
+  font-size: 25px;
+  margin-top: 75px;
+  line-height: 1.2;
+}
+#main .menu .big_menu .big_menu_list li:hover a .fa-arrow-right {
+  display: block;
+  color: white;
+  font-size: 30px;
 }
 #main .board {
   width: 100%;
