--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -1,9 +1,14 @@
 @import "variables", "mixins", "reset";
 
+body {
+  background-image: url(../../images/mainbg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 800px;
+}
+
 #header {
   width: 100%;
   height: 120px;
-  background: #e0e0e0;
   display: flex;
   justify-content: space-between;
   position: absolute;
@@ -15,9 +20,9 @@
   h1 {
     a {
       display: block;
-      height: 68px;
+      height: 48px;
       img {
-        width: 350px;
+        width: 250px;
       }
     }
   }
@@ -33,14 +38,20 @@
       right: 150px;
       ul {
         gap: 30px;
+        a {
+          color: white;
+        }
       }
     }
     .main_nav {
-      font-size: 24px;
+      font-size: 23px;
       font-weight: bold;
       margin-top: 25px;
-      ul {
+      .nav_1depth {
         gap: 50px;
+        a {
+          color: white;
+        }
       }
     }
   }
@@ -51,7 +62,89 @@
   .menu {
     width: 100%;
     height: 800px;
-    background-color: #c2c2c2;
+    text-align: center;
+    padding-top: 170px;
+    h2 {
+      font-size: 24px;
+      font-weight: normal;
+      color: white;
+      padding-bottom: 10px;
+    }
+    img {
+      width: 300px;
+    }
+    .search {
+      padding: 50px 0;
+      input {
+        border: 2px solid #97ca66;
+        border-radius: 10px 0 0 10px;
+        width: 700px;
+        height: 60px;
+        font-family: "Pretendard";
+        padding: 15px;
+      }
+      button {
+        background: #97ca66;
+        width: 60px;
+        height: 60px;
+        border-radius: 0 10px 10px 0;
+        margin-left: -7px;
+        img {
+          width: 25px;
+        }
+      }
+    }
+    .big_menu {
+      padding-top: 50px;
+      .big_menu_list {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        li {
+          background: white;
+          box-shadow: rgb(104, 104, 104) 0px 0px 10px;
+          border-radius: 10px;
+          width: 170px;
+          height: 230px;
+          a {
+            display: block;
+            width: 170px;
+            height: 230px;
+            img {
+              width: 120px;
+              margin: 20px 0 10px 0;
+            }
+            h3 {
+              font-weight: bold;
+              line-height: 1.2;
+            }
+            .fa-arrow-right {
+              display: none;
+            }
+          }
+        }
+        li:hover {
+          background: #97ca66;
+          transition: background 0.3s ease;
+          a {
+            img {
+              display: none;
+            }
+            h3 {
+              color: white;
+              font-size: 25px;
+              margin-top: 75px;
+              line-height: 1.2;
+            }
+            .fa-arrow-right {
+              display: block;
+              color: white;
+              font-size: 30px;
+            }
+          }
+        }
+      }
+    }
   }
 
   .board {
