--- a/assets/css/comm.css
+++ b/assets/css/comm.css
@@ -372,6 +372,7 @@ body {
 #main .menu .big_menu .big_menu_list li a h3 {
   font-weight: bold;
   line-height: 1.2;
+  margin-bottom: 10px;
 }
 #main .menu .big_menu .big_menu_list li a .fa-arrow-right {
   display: none;
@@ -397,8 +398,65 @@ body {
 #main .board {
   width: 100%;
   height: 500px;
-  background-color: #a7a7a7;
   margin: 70px 0;
+  display: flex;
+  gap: 30px;
+}
+#main .board h3 {
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+}
+#main .board h3 button {
+  margin-bottom: 10px;
+}
+#main .board h3 button .fa-arrow-right {
+  font-size: 13px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid #a7a7a7;
+  color: #888888;
+  padding: 7px;
+}
+#main .board .notice {
+  width: 400px;
+}
+#main .board .notice .notice_list {
+  margin-top: 10px;
+}
+#main .board .notice .notice_list li a p {
+  width: 390px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 2.5;
+}
+#main .board .notice .notice_list li a p strong {
+  font-weight: bold;
+}
+#main .board .notice .notice_list li:hover {
+  font-weight: bold;
+}
+#main .board .booknarae {
+  margin-top: 15px;
+}
+#main .board .booknarae a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 110px;
+  border-radius: 10px;
+  border: 2px solid #97ca66;
+  background: white;
+  font-size: 18px;
+}
+#main .board .booknarae a img {
+  width: 80px;
+  margin-right: 35px;
 }
 #main .book {
   width: 100%;
