--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -117,6 +117,7 @@ body {
             h3 {
               font-weight: bold;
               line-height: 1.2;
+              margin-bottom: 10px;
             }
             .fa-arrow-right {
               display: none;
@@ -150,8 +151,69 @@ body {
   .board {
     width: 100%;
     height: 500px;
-    background-color: #a7a7a7;
     margin: 70px 0;
+    display: flex;
+    gap: 30px;
+    h3 {
+      font-size: 30px;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between;
+      button {
+        margin-bottom: 10px;
+        .fa-arrow-right {
+          font-size: 13px;
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          border: 1px solid #a7a7a7;
+          color: #888888;
+          padding: 7px;
+        }
+      }
+    }
+    .notice {
+      width: 400px;
+      .notice_list {
+        margin-top: 10px;
+        li {
+          a {
+            p {
+              width: 390px;
+              display: block;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              line-height: 2.5;
+              strong {
+                font-weight: bold;
+              }
+            }
+          }
+        }
+        li:hover {
+          font-weight: bold;
+        }
+      }
+    }
+    .booknarae {
+      margin-top: 15px;
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 400px;
+        height: 110px;
+        border-radius: 10px;
+        border: 2px solid #97ca66;
+        background: white;
+        font-size: 18px;
+        img {
+          width: 80px;
+          margin-right: 35px;
+        }
+      }
+    }
   }
 
   .book {
