--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -14,7 +14,7 @@ body {
   position: absolute;
   z-index: 1000;
   left: 0;
-  padding: 0 150px;
+  padding: 0 250px;
   align-items: center;
 
   h1 {
@@ -35,7 +35,7 @@ body {
     .top_nav {
       position: absolute;
       top: 20px;
-      right: 150px;
+      right: 250px;
       ul {
         gap: 30px;
         a {
@@ -58,15 +58,15 @@ body {
 }
 
 #main {
-  margin: 0 150px;
+  margin: 0 250px;
   .menu {
     width: 100%;
     height: 800px;
     text-align: center;
     padding-top: 170px;
     h2 {
-      font-size: 24px;
-      font-weight: normal;
+      font-size: 22px;
+      font-weight: lighter;
       color: white;
       padding-bottom: 10px;
     }
@@ -153,7 +153,7 @@ body {
     height: 500px;
     margin: 70px 0;
     display: flex;
-    gap: 30px;
+    gap: 50px;
     h3 {
       font-size: 30px;
       font-weight: bold;
@@ -214,6 +214,53 @@ body {
         }
       }
     }
+    .event {
+      width: 100%;
+
+      .event_list {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        list-style: none;
+        padding: 0;
+        li {
+          width: 49%;
+          box-shadow: rgb(209, 209, 209) 0px 0px 5px;
+          border-radius: 10px;
+          box-sizing: border-box;
+          h4 {
+            background: #97ca66;
+            border-radius: 10px 10px 0 0;
+            color: white;
+            padding: 13px 25px;
+            font-size: 20px;
+            line-height: 1.2;
+            strong {
+              font-weight: bold;
+            }
+          }
+          .event_info {
+            display: flex;
+            color: #555;
+            padding: 18px 20px 18px 20px;
+            font-size: 16px;
+            strong {
+              font-weight: bold;
+              margin-right: 10px;
+            }
+          }
+          .event_info:last-child {
+            margin-top: -30px;
+          }
+        }
+        .event_list_r {
+          margin-right: 19px;
+        }
+        .event_list_b {
+          margin-bottom: 20px;
+        }
+      }
+    }
   }
 
   .book {
@@ -225,7 +272,7 @@ body {
 }
 
 #footer {
-  margin: 0 150px;
+  margin: 0 250px;
   .link {
     width: 100%;
     height: 70px;
