--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -383,16 +383,87 @@ body {
 }
 
 #footer {
-  margin: 0 250px;
+  width: 100%;
   .link {
     width: 100%;
     height: 70px;
-    background-color: #6a6a6a;
+    border-top: 1px solid #dbdbdb;
+    border-bottom: 1px solid #dbdbdb;
+    display: flex;
+    align-items: center;
+    .line01,
+    .line02 {
+      width: 100px;
+      height: 70px;
+      border-right: 1px solid #dbdbdb;
+      position: absolute;
+    }
+    .line01 {
+      left: 618px;
+    }
+    .line02 {
+      right: 717px;
+    }
+    .familysite_1depth {
+      display: flex;
+      margin: 0 250px;
+      width: 100%;
+      position: relative;
+      li {
+        width: 33.3333%;
+        button {
+          width: 100%;
+          height: 70px;
+          font-family: "Pretendard";
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          color: #555;
+        }
+      }
+      .familysite_2depth {
+        position: absolute;
+        width: 33.3333%;
+        bottom: 70px;
+        z-index: 100;
+        background: white;
+        border-left: 1px solid #dbdbdb;
+        border-right: 1px solid #dbdbdb;
+        li {
+          width: 100%;
+          line-height: 3;
+          border-top: 1px solid #dbdbdb;
+          padding: 5px 10px;
+        }
+      }
+    }
   }
 
   .footer {
-    width: 100%;
+    margin: 0 250px;
     height: 140px;
-    background-color: #505050;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #000;
+    h2 {
+      font-size: 30px;
+      font-weight: bold;
+      color: #767676;
+    }
+    .footer_txt {
+      .footer_list {
+        display: flex;
+        gap: 40px;
+        color: #767676;
+      }
+      .footer_info {
+        color: #9d9d9d;
+        margin: 7px 0;
+      }
+      .copy {
+        color: #9d9d9d;
+      }
+    }
   }
 }
